# nifty-anilist

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
nifty_anilist/: __init__.py  anilist_client.py  auth.py  client.py  logging.py  request.py  settings.py
nifty_anilist/client/: async_base_client.py  client.py  custom_fields.py  custom_mutations.py  custom_queries.py
nifty_anilist/prebuilt/: common_models.py  media.py  media_list.py
nifty_anilist/utils/: auth_utils.py  request_utils.py
src/: settings.py
src/util/: auth.py  logging.py  request.py
test/: conftest.py
test/integration/: test_auth_integration.py  test_request_integration.py
test/integration/prebuilt/: test_media.py  test_media_list.py
test/unit/util/: test_model_utils.py
test/util/: patches.py
